--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.28.2
 pandas
 numpy
 scikit-learn==1.3.0
-tensorflow==2.15.0
+tensorflow-cpu==2.15.0
 keras==2.15.0 
 opencv-python
 pillow
